fix header width on tablet

--- a/_assets/css/_base.scss
+++ b/_assets/css/_base.scss
@@ -52,6 +52,10 @@ h2 {
     left: 0;
   }
 
+  .wrapper {
+    width: 100%;
+  }
+
   .logo {
     font-size: 42px;
     font-weight: 500;
